--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 .build/
+Twitter.xcworkspace/
 
 # CocoaPods
 #
@@ -45,7 +46,8 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+
 
 # Carthage
 #
